examples/errors/module_invalid_content_import_error.flx
// Importing this module triggers E019 (INVALID MODULE CONTENT)
// because its body contains a non-function declaration.
import Errors.ModuleInvalidContentError

print(Errors.ModuleInvalidContentError.x);
